--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,13 +1,45 @@
-<footer class="flex-rw">
+<footer class="flex-rw site-footer">
   <section class="footer-bottom-section flex-rw">
-    <div class="footer-bottom-wrapper">
-     <span> 	&copy; </span>
-      
-      2019 LE MARCHE DE GARLANDE 
-        <!-- <address class="footer-address" role="company address">Bergen, NY</address><span class="footer-bottom-rights"> - All Rights Reserved - </span> -->
+    <div class="horizontal-scroll2">
+      <div class="horizontal-scroll">
+
+        <div class="container footer-address">
+          <div class="row">
+            <div class="col-sm-12 col-md-6">
+              <h6>ADDRESS</h6>
+              <p class="text-justify">Le Marché De Garlande<br />
+                2 Place Etienne de Garlande,<br />91410 Corbreuse,<br />France<br />
+                Numéro de contact: 0953739158</p>
+            </div>
+
+            <div class="col-xs-6 col-md-3">
+              <h6>Heures d'ouverture</h6>
+              <ul class="footer-links">
+                <li>Du Lundi au Jeudi - de 8h à 21h</li>
+                <li>Le Vendredi au dimanche -8h à 21h 30</li>
+                <li>Sans interruption</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="container copyright-section">
+          <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+              <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
+           <a href="#">KOA software</a>.
+              </p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+              <ul class="social-icons">
+                <li><a class="facebook" href="https://www.facebook.com/Le-marche-de-Garlande-107085247416451/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a class="twitter" href="javscript:void(0);" target="_blank"><i class="fa fa-twitter"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        
+
+      </div>
     </div>
-    <!-- <div class="footer-bottom-wrapper">
-      <a href="/terms-of-use.html" class="generic-anchor" rel="nofollow">Terms</a> | <a href="/privacy-policy.html" class="generic-anchor" rel="nofollow">Privacy</a>
-    </div> -->
   </section>
 </footer>
