--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,116 +1,117 @@
+
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="assets/img/slide1.jpg" alt="First slide">
-        <div class="carousel-caption">
-            <!-- <h3>Votre source de motivation est l’ingrédient qui peut faire toute la différence</h3> -->
-            <!-- <p>LA is always so much fun!</p> -->
-            <h3> Le Marché De Garlande </h3>
-          </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="assets/img/slide2.jpg" alt="Second slide">
-        <div class="carousel-caption">
-            <!-- <h3>Votre source de motivation est l’ingrédient qui peut faire toute la différence</h3> -->
-            <!-- <p>LA is always so much fun!</p> -->
-            <h3> Le Marché De Garlande </h3>
-          </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="assets/img/slide3.jpg" alt="Third slide">
-        <div class="carousel-caption">
-            <!-- <h3>Votre source de motivation est l’ingrédient qui peut faire toute la différence</h3> -->
-            <!-- <p>LA is always so much fun!</p> -->
-            <h3> Le Marché De Garlande </h3>
-          </div>
-      </div>
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active" (click)="goToShopPage()">
+      <img class="d-block w-100" src="assets/img/slide1.jpg" alt="First slide">
+      <div class="carousel-caption">
+          <!-- <h3>Votre source de motivation est l’ingrédient qui peut faire toute la différence</h3> -->
+          <!-- <p>LA is always so much fun!</p> -->
+          <h3> Le Marché De Garlande </h3>
+        </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <div class="carousel-item" (click)="goToShopPage()">
+      <img class="d-block w-100" src="assets/img/slide2.jpg" alt="Second slide">
+      <div class="carousel-caption">
+          <!-- <h3>Votre source de motivation est l’ingrédient qui peut faire toute la différence</h3> -->
+          <!-- <p>LA is always so much fun!</p> -->
+          <h3> Le Marché De Garlande </h3>
+        </div>
+    </div>
+    <div class="carousel-item" (click)="goToShopPage()">
+      <img class="d-block w-100" src="assets/img/slide3.jpg" alt="Third slide">
+      <div class="carousel-caption">
+          <!-- <h3>Votre source de motivation est l’ingrédient qui peut faire toute la différence</h3> -->
+          <!-- <p>LA is always so much fun!</p> -->
+          <h3> Le Marché De Garlande </h3>
+        </div>
+    </div>
   </div>
-  
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 
 <div class='container-fluid custom-owl-carousel'>
-  <owl-carousel [options]="SlideOptions" [items]="Images" [carouselClasses]="['owl-theme', 'sliding']" >
-    <div class="item" (click)="goToShopPage()" *ngFor="let item of products">
-      <div style="align-content: center; cursor: pointer;">
-          <img style="height: 260px;width:100%"src={{item.img}}/>
-          <h4> {{item.proName}} </h4>
-      </div>
+<owl-carousel [options]="SlideOptions" [items]="Images" [carouselClasses]="['owl-theme', 'sliding']" >
+  <div class="item" (click)="goToShopPage()" *ngFor="let item of products" style="text-align:center;">
+    <div style="align-content: center; cursor: pointer;">
+        <img style="height: 300px;width:300px"src={{item.img}}/>
+        <h4> {{item.proName}} </h4>
     </div>
-  </owl-carousel>
+  </div>
+</owl-carousel>
 </div>
 
 <!-- Featured Products -->
 <section class="portfolio">
-   <div class="container">
-   	  <div class="heading">
-   	  	  <h1> Featured Product </h1>
-   	  </div>
-   	  <div class="filter-btn">
-   	  	 <ul id="buttons">
-   	  	 	  <li [ngClass]="{'active': istopeValue === 'all'}" data-target="all" value="all" (click)="selectIsotop($event)">All</li>
-   	  	 	  <li [ngClass]="{'active': istopeValue === 'fruits'}" data-target="fruits" value="fruits" (click)="selectIsotop($event)">Fruits</li>
-            <li [ngClass]="{'active': istopeValue === 'vegetables'}" data-target="vegetables" value="vegetables" (click)="selectIsotop($event)">Vegetables</li> 
-   	  	 </ul>
-   	  </div>
-   	  <div class="items">
-   	  	 <div class="box" data-id="fruits">
-   	  	 	 <div class="inner" (click)="goToShopPage()">
-   	  	 	 	 <img src="assets/img/products_images/fruits/cirtus/orri.png" alt="portfolio" />
-   	  	 	 </div>
-          </div>
-          <div class="box" data-id="vegetables">
-            <div class="inner" (click)="goToShopPage()">
-               <img src="assets/img/products_images/vegetables/fruit_vegetables/cherry_tomato.png" alt="portfolio" />
-            </div>
-         </div>
-   	  	 <div class="box" data-id="fruits">
-   	  	 	 <div class="inner">
-   	  	 	 	 <img src="assets/img/products_images/fruits/red_fruits/blueberries.png" alt="portfolio" />
-   	  	 	 </div>
-          </div>
-        <div class="box" data-id="vegetables">
-            <div class="inner" (click)="goToShopPage()">
-               <img src="assets/img/products_images/vegetables/potatoes/yam.png" alt="portfolio" />
-            </div>
+ <div class="container">
+     <div class="heading">
+         <h1> Featured Product </h1>
+     </div>
+     <div class="filter-btn">
+        <ul id="buttons">
+            <li [ngClass]="{'active': istopeValue === 'all'}" data-target="all" value="all" (click)="selectIsotop($event)">All</li>
+            <li [ngClass]="{'active': istopeValue === 'fruits'}" data-target="fruits" value="fruits" (click)="selectIsotop($event)">Fruits</li>
+          <li [ngClass]="{'active': istopeValue === 'vegetables'}" data-target="vegetables" value="vegetables" (click)="selectIsotop($event)">Vegetables</li> 
+        </ul>
+     </div>
+     <div class="items">
+        <div class="box" data-id="fruits">
+           <div class="inner" (click)="goToShopPage()">
+              <img src="assets/img/products_images/fruits/cirtus/orri.png" alt="portfolio" />
+           </div>
         </div>
-   	  	 <div class="box" data-id="fruits">
-   	  	 	 <div class="inner" (click)="goToShopPage()">
-   	  	 	 	 <img src="assets/img/products_images/fruits/red_fruits/gooseberry.png" alt="portfolio" />
-   	  	 	 </div>
-          </div>
         <div class="box" data-id="vegetables">
-            <div class="inner" (click)="goToShopPage()">
-                 <img src="assets/img/products_images/vegetables/herbs/mint.png" alt="portfolio" />
-            </div>
-        </div>
-   	  	 <div class="box" data-id="fruits">
-   	  	 	 <div class="inner" (click)="goToShopPage()">
-   	  	 	 	 <img src="assets/img/products_images/fruits/red_fruits/cherry_red.png" alt="portfolio" />
-   	  	 	 </div>
-   	  	 </div>
-   	  	<div class="box" data-id="vegetables">
           <div class="inner" (click)="goToShopPage()">
-              <img src="assets/img/products_images/vegetables/root_vegetables/pink_radish.png" alt="portfolio" />
+             <img src="assets/img/products_images/vegetables/fruit_vegetables/cherry_tomato.png" alt="portfolio" />
           </div>
-        </div>    
-   	  	 
+       </div>
+        <div class="box" data-id="fruits">
+           <div class="inner">
+              <img src="assets/img/products_images/fruits/red_fruits/blueberries.png" alt="portfolio" />
+           </div>
+        </div>
+      <div class="box" data-id="vegetables">
+          <div class="inner" (click)="goToShopPage()">
+             <img src="assets/img/products_images/vegetables/potatoes/yam.png" alt="portfolio" />
+          </div>
+      </div>
+        <div class="box" data-id="fruits">
+           <div class="inner" (click)="goToShopPage()">
+              <img src="assets/img/products_images/fruits/red_fruits/gooseberry.png" alt="portfolio" />
+           </div>
+        </div>
+      <div class="box" data-id="vegetables">
+          <div class="inner" (click)="goToShopPage()">
+               <img src="assets/img/products_images/vegetables/herbs/mint.png" alt="portfolio" />
+          </div>
+      </div>
+        <div class="box" data-id="fruits">
+           <div class="inner" (click)="goToShopPage()">
+              <img src="assets/img/products_images/fruits/red_fruits/cherry_red.png" alt="portfolio" />
+           </div>
+        </div>
+       <div class="box" data-id="vegetables">
+        <div class="inner" (click)="goToShopPage()">
+            <img src="assets/img/products_images/vegetables/root_vegetables/pink_radish.png" alt="portfolio" />
+        </div>
+      </div>    
         
-       
-   	  </div>
-   </div>
+      
+     
+     </div>
+ </div>
 </section>
 
 
