--- a/src/app/liked-shopped/liked-shopped.component.css
+++ b/src/app/liked-shopped/liked-shopped.component.css
@@ -69,11 +69,6 @@
     text-align: right;
 }
 
-.total_width {
-    width: 90%;
-    margin: 20px auto;   
-}
-
 .no_data {
     padding: 20px 10px;
     font-size: 22px;
@@ -81,7 +76,48 @@
 }
 
 .order_btn {
-    
+    border-color: #7eac39;
+    color: #fff;
+    box-shadow: 0 0 40px 40px #7eac39 inset, 0 0 0 0 #7eac39;
+    -webkit-transition: all 150ms ease-in-out;
+    transition: all 150ms ease-in-out;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: transparent;
+    border-radius: 0.6em;
+    cursor: pointer;
+    display: -webkit-box;
+    display: flex;
+    align-self: center;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1;
+    margin: 20px;
+    padding: 1.2em 2.8em;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+.order_btn:hover {
+    box-shadow: 0 0 10px 0 #7eac39 inset, 0 0 10px 4px #7eac39;
+    color: #7eac39;
+}
+.total-price {
+    text-align: center !important;
+    font-weight: bold;
+    font-size: 27px;
+}
+.total-button {
+    margin: 20px 40px auto;
+    float: right;
+}
+.total-text {
+    background-color: transparent !important;
+    font-size: 16px !important;
 }
 
 .shop_box {
@@ -90,6 +126,8 @@
     margin-bottom: 15px;
     justify-content: space-between;
     width: 48%;
+    height: auto;
+    max-height: 164px;
 }
 
 .shop_box > img {
