--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -127,12 +127,12 @@
             <mat-step>  
                 <div class="form_container">
 
-                    <div class="success_msg_container d-flex ">
+                    <div class="success_msg_container">
                         <img class="mr-4" src="assets/img/icons/tick.svg" />
                         <p> 
                             votre commande a été passée avec succès
                         </p>
-                        <button class="btn order_btn" (click)="gotoProduct()">Revenir à la boutique</button>
+                        <button class="btn order_btn goto-home" (click)="gotoProduct()">Revenir à la boutique</button>
                     </div>
                    
                 </div>
