--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,14 +9,14 @@
               <h6>ADDRESS</h6>
               <p class="text-justify">Le Marché De Garlande<br />
                 2 Place Etienne de Garlande,<br />91410 Corbreuse,<br />France<br />
-                Numéro de contact: 0953739158</p>
+                Numéro de contact: Tel - 0953739158, port - 0651883315</p>
             </div>
 
             <div class="col-xs-6 col-md-3">
               <h6>Heures d'ouverture</h6>
               <ul class="footer-links">
-                <li>Du Lundi au Jeudi - de 8h à 21h</li>
-                <li>Le Vendredi au dimanche -8h à 21h 30</li>
+                <li>Lundi de 8h-16h, 15h30-20h</li>
+                <li>Du mardi au dimanche de 8h à 21h30</li>
                 <li>Sans interruption</li>
               </ul>
             </div>
