--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -5,10 +5,10 @@
       <div class="row">
           <div class="col-lg-12 text-center">
               <div class="breadcrumb__text">
-                  <h2>Organi Shop</h2>
+                  <h2>Information produit</h2>
                   <div class="breadcrumb__option">
-                      <a href="./index.html">Home</a>
-                      <span>Shop</span>
+                      <a href="./index.html">Accueil</a>
+                      <span>Des produits</span>
                   </div>
               </div>
           </div>
@@ -24,7 +24,7 @@
           <div class="col-lg-3 col-md-5">
               <div class="hero__categories">
                   <div class="hero__categories__all">
-                      <span>All Categories</span>
+                      <span>Toutes catégories</span>
                   </div>
 
                   <section class="example-section">
@@ -148,7 +148,7 @@
             </div>
             <button class="load_more_btn" (click)="scrollHandler()" 
                 *ngIf="allProducts.length !== productList.length + 1"> 
-                Load More 
+                Charger plus
             </button>
           </div>
       </div>
